--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -6,13 +6,12 @@
     <connectionString>iWorkEntities</connectionString>
   </properties>
   <components>
-    <component id="FirstDbContext" type="System.Data.Entity.DbContext, EntityFramework" lifestyle="scoped">
+    <component id="FirstDbContext" type="System.Data.Entity.DbContext, EntityFramework" lifestyle="PerWebRequest">
       <parameters>
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
     </component>
-    <component type="System.Web.Http.Controllers.IHttpController, System.Web.Http" lifestyle="scoped" />
-    <component type="iWork.Core.ServiceContainer, iWork.Core" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="scoped" />
+    <component type="iWork.Core.ServiceContainer, iWork.Core" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="PerWebRequest" />
     <component type="iWork.Core.AuthorizationInterceptor, iWork.Core" lifestyle="thread" />
   </components>
 </configuration>
