--- a/iWork.Entities/iWork.Entities.vbproj
+++ b/iWork.Entities/iWork.Entities.vbproj
@@ -92,6 +92,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="User.vb">
+      <DependentUpon>ModelGenerator.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
