--- a/iWork.Service/iWork.Service.vbproj
+++ b/iWork.Service/iWork.Service.vbproj
@@ -62,6 +62,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IAccountService.vb" />
     <Compile Include="Interfaces\IContactService.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
@@ -78,6 +79,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Services\AccountService.vb" />
     <Compile Include="Services\ContactService.vb" />
   </ItemGroup>
   <ItemGroup>
