--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -12,6 +12,6 @@
       </parameters>
     </component>
     <component type="iWork.Core.ServiceContainer, iWork.Core" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="PerWebRequest" />
-    <component type="iWork.Core.AuthorizationInterceptor, iWork.Core" lifestyle="thread" />
+    <component type="iWork.Core.AuthorizationInterceptor, iWork.Core" lifestyle="PerWebRequest" />
   </components>
 </configuration>
