--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -14,8 +14,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
