--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
@@ -20,14 +20,9 @@
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
-    <httpModules>
-      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
-    </httpModules>
-    <httpHandlers>
-      <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-    </httpHandlers>
+    
+    
+    
   </system.web>
   <location path="iView">
     <system.webServer>
@@ -39,23 +34,18 @@
   <system.webServer>
     <modules>
       <add name="iViewHttpModule" type="iView.ViewEngine.iViewHttpModule, iView.ViewEngine" />
-      <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+      
     </modules>
-    <validation validateIntegratedModeConfiguration="false" />
+    
     <handlers>
-      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+      
       
       
       
       
     <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
   </system.webServer>
-  <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-    <!-- 
-          For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
-          or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
-      -->
-  </glimpse>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -68,6 +58,14 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
