--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -6,7 +6,7 @@
     <connectionString>iWorkEntities</connectionString>
   </properties>
   <components>
-    <component id="FirstDbContext" type="System.Data.Entity.DbContext, EntityFramework" lifestyle="PerWebRequest">
+      <component id="FirstDbContext" service="System.Data.Entity.DbContext, EntityFramework" type="iWork.Repository.EF.iWorkContext, iWork.Repository" lifestyle="PerWebRequest">
       <parameters>
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
