--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -183,7 +183,18 @@
     <Content Include="Content\img\upload.svg" />
     <Content Include="Content\img\user.svg" />
     <Content Include="Content\img\watch.svg" />
+    <Content Include="Content\js\common.js" />
+    <Content Include="Content\js\controllers\login.js" />
+    <Content Include="Content\js\controllers\logout.js" />
+    <Content Include="Content\js\controllers\navbar.js" />
+    <Content Include="Content\js\controllers\profile.js" />
+    <Content Include="Content\js\controllers\signup.js" />
+    <Content Include="Content\js\directives.js" />
+    <Content Include="Content\js\directives\passwordMatch.js" />
+    <Content Include="Content\js\directives\passwordStrength.js" />
+    <Content Include="Content\js\login.js" />
     <Content Include="Content\js\page.js" />
+    <Content Include="Content\js\services\account.js" />
     <Content Include="Content\lib\angular-datatables\angular-datatables.js" />
     <Content Include="Content\lib\angular-datatables\angular-datatables.min.js" />
     <Content Include="Content\lib\angular-datatables\plugins\bootstrap\angular-datatables.bootstrap.js" />
@@ -276,6 +287,12 @@
     <Content Include="Content\lib\angular-strap\modules\typeahead.tpl.min.js" />
     <Content Include="Content\lib\angular\angular-animate.js" />
     <Content Include="Content\lib\angular\angular-bootstrap-switch.js" />
+    <Content Include="Content\lib\angular\angular-messages.js" />
+    <Content Include="Content\lib\angular\angular-mocks.js" />
+    <Content Include="Content\lib\angular\angular-resource.js" />
+    <Content Include="Content\lib\angular\angular-strap.js" />
+    <Content Include="Content\lib\angular\angular-strap.tpl.js" />
+    <Content Include="Content\lib\angular\angular-ui-router.js" />
     <Content Include="Content\lib\animation\css\animsition.css" />
     <Content Include="Content\lib\animation\css\animsition.min.css" />
     <Content Include="Content\lib\animation\js\jquery.animsition.js" />
@@ -441,6 +458,10 @@
     <Content Include="iView\kitchensink\grid-observer.html" />
     <Content Include="iView\kitchensink\kitchensink.html" />
     <Content Include="iView\login\login.html" />
+    <Content Include="iView\login\partials\home.html" />
+    <Content Include="iView\login\partials\login.html" />
+    <Content Include="iView\login\partials\profile.html" />
+    <Content Include="iView\login\partials\signup.html" />
     <Content Include="iView\Rollcall\list.html" />
     <Content Include="iView\Rollcall\Rollcall.xml" />
     <Content Include="Manifest.xml" />
