--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -4,11 +4,17 @@
   </facilities>-->
   <properties>
     <connectionString>iWorkEntities</connectionString>
+    <authenticationConnectionString>AuthConnectionString</authenticationConnectionString>
   </properties>
   <components>
-      <component id="FirstDbContext" service="System.Data.Entity.DbContext, EntityFramework" type="iWork.Repository.EF.iWorkContext, iWork.Repository" lifestyle="PerWebRequest">
+    <component id="iWorkContext" service="System.Data.Entity.DbContext, EntityFramework" type="iWork.Repository.EF.iWorkContext, iWork.Repository" lifestyle="PerWebRequest">
       <parameters>
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
+      </parameters>
+    </component>
+    <component id="AccountContext" type="iWork.Core.AccountContext, iWork.Core" lifestyle="PerWebRequest">
+      <parameters>
+        <nameOrConnectionString>#{authenticationConnectionString}</nameOrConnectionString>
       </parameters>
     </component>
     <component type="iWork.Core.ServiceContainer, iWork.Core" service="iWork.Core.IServiceContainer, iWork.Core" lifestyle="PerWebRequest" />
