--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="owin:appStartup" value="StartupConfiguration" />
+    <add key="owin:appStartup" value="iViewStartup" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -16,36 +15,20 @@
   <connectionStrings>
     <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <add name="iWorkEntities" connectionString="data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="AuthConnectionString" connectionString="data source=.\sql2012;initial catalog=Auth;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-    
-    
-    
   </system.web>
-  <location path="iView">
-    <system.webServer>
-      <handlers>
-        <add name="iViewFileHandler" path="*" verb="*" type="System.Web.StaticFileHandler" />
-      </handlers>
-    </system.webServer>
-  </location>
   <system.webServer>
-    <modules>
-      <add name="iViewHttpModule" type="iView.ViewEngine.iViewHttpModule, iView.ViewEngine" />
-      
-    </modules>
-    
     <handlers>
-      
-      
-      
-      
-      
-    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
   </system.webServer>
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -70,4 +53,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <location path="iView">
+    <system.webServer>
+      <handlers>
+        <add name="iViewFileHandler" path="*" verb="*" type="System.Web.StaticFileHandler" />
+      </handlers>
+    </system.webServer>
+  </location>
 </configuration>
