--- a/iWork.Web.UI/packages.config
+++ b/iWork.Web.UI/packages.config
@@ -3,6 +3,8 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="iView" version="1.0.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
