--- a/iWork.Web.UI/iWork.Web.UI.vbproj
+++ b/iWork.Web.UI/iWork.Web.UI.vbproj
@@ -178,13 +178,18 @@
     <Content Include="Content\img\address-book.svg" />
     <Content Include="Content\img\area-graph.svg" />
     <Content Include="Content\img\grid.svg" />
+    <Content Include="Content\img\key.svg" />
+    <Content Include="Content\img\loader.svg" />
     <Content Include="Content\img\loading.gif" />
     <Content Include="Content\img\login-header.png" />
+    <Content Include="Content\img\mask.svg" />
     <Content Include="Content\img\office.svg" />
     <Content Include="Content\img\old-phone.svg" />
+    <Content Include="Content\img\puzzle.svg" />
     <Content Include="Content\img\scope.svg" />
     <Content Include="Content\img\upload.svg" />
     <Content Include="Content\img\user.svg" />
+    <Content Include="Content\img\wand.svg" />
     <Content Include="Content\img\watch.svg" />
     <Content Include="Content\js\common.js" />
     <Content Include="Content\js\controllers\login.js" />
@@ -293,6 +298,7 @@
     <Content Include="Content\lib\angular\angular-messages.js" />
     <Content Include="Content\lib\angular\angular-mocks.js" />
     <Content Include="Content\lib\angular\angular-resource.js" />
+    <Content Include="Content\lib\angular\angular-route.js" />
     <Content Include="Content\lib\angular\angular-strap.js" />
     <Content Include="Content\lib\angular\angular-strap.tpl.js" />
     <Content Include="Content\lib\angular\angular-ui-router.js" />
@@ -335,6 +341,8 @@
     <Content Include="Content\lib\dropzone\dropzone.js" />
     <Content Include="Content\lib\element-transitions\elementTransitions.css" />
     <Content Include="Content\lib\element-transitions\elementTransitions.min.js" />
+    <Content Include="Content\lib\jquery-inputmask\jquery.inputmask.bundle.js" />
+    <Content Include="Content\lib\jquery-inputmask\jquery.inputmask.bundle.min.js" />
     <Content Include="Content\lib\jquery.svginject.js" />
     <Content Include="Content\lib\magicsugges\.gitignore" />
     <Content Include="Content\lib\magicsugges\magicsuggest-min.css" />
@@ -452,6 +460,9 @@
     <Content Include="iView\Contacts\form.html" />
     <Content Include="iView\Contacts\grid.html" />
     <Content Include="iView\Contacts\list.html" />
+    <Content Include="iView\kitchensink\mask.html" />
+    <Content Include="iView\kitchensink\password.html" />
+    <Content Include="iView\kitchensink\route.html" />
     <Content Include="iView\kitchensink\test.html" />
     <Content Include="iView\include\contactForm.html" />
     <Content Include="iView\kitchensink\angularstrap.html" />
