--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <appSettings>
     <add key="owin:appStartup" value="iViewStartup" />
   </appSettings>
@@ -13,9 +13,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="iWorkEntities" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="iWorkEntities" connectionString="data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="AuthConnectionString" connectionString="data source=.\sql2012;initial catalog=Auth;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="iWorkEntities" connectionString="data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="iWorkEntities" connectionString="data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <!--<add name="AuthConnectionString" connectionString="data source=.\sql2012;initial catalog=Auth;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="AuthConnectionString" connectionString="data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5" />
