--- a/iWork.Web.UI/Config/Castle.config
+++ b/iWork.Web.UI/Config/Castle.config
@@ -12,7 +12,7 @@
         <nameOrConnectionString>#{connectionString}</nameOrConnectionString>
       </parameters>
     </component>
-    <component id="AccountContext" type="iWork.Core.AccountContext, iWork.Core" lifestyle="PerWebRequest">
+    <component id="AccountContext" type="iWork.Core.Repositories.EF.AccountContext, iWork.Core" lifestyle="PerWebRequest">
       <parameters>
         <nameOrConnectionString>#{authenticationConnectionString}</nameOrConnectionString>
       </parameters>
