--- a/iWork.Web.UI/Web.config
+++ b/iWork.Web.UI/Web.config
@@ -13,8 +13,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="iWorkEntities" connectionString="data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="iWorkEntities" connectionString="data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="iWorkEntities" connectionString="data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="iWorkEntities" connectionString="data source=.\sql2012;initial catalog=iWork;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="AuthConnectionString" connectionString="data source=.\sql2012;initial catalog=Auth;persist security info=True;user id=sa;password=qweRTY123!@#;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <!--<add name="AuthConnectionString" connectionString="data source=.\sql2008;initial catalog=iWork;persist security info=True;user id=sa;password=retan;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
